--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ body {
     width: 100%;
     padding-left: 2rem;
     padding-bottom: 1rem; }
-    @media only screen and (min-width: 770px) and (max-width: 1440px) {
+    @media only screen and (min-width: 770px) and (max-width: 4000px) {
       .footer__container {
         display: flex; } }
   .footer__flex-1 {
@@ -102,7 +102,7 @@ body {
       .footer__link {
         grid-template-rows: 15% 1fr;
         grid-template-columns: repeat(3, 1fr); } }
-    @media only screen and (min-width: 770px) and (max-width: 1440px) {
+    @media only screen and (min-width: 770px) and (max-width: 4000px) {
       .footer__link {
         display: contents; } }
     .footer__link h6 {
@@ -144,17 +144,47 @@ body {
         margin: 8px; } }
     .footer .copyright__link {
       color: #ff0000; }
-  .footer__icons {
-    text-align: center; }
-    @media only screen and (min-width: 380px) and (max-width: 770px) {
-      .footer__icons {
+  .footer__icons-wrapper {
+    display: inline-flex;
+    text-align: center;
+    column-gap: 1.5rem; }
+    .footer__icons-wrapper .icon {
+      display: flex;
+      flex-direction: column;
+      transform: translateY(-50px); }
+      .footer__icons-wrapper .icon:hover .tooltip {
+        opacity: 1; }
+    .footer__icons-wrapper .tooltip {
+      background-color: #086ad8;
+      color: #fff;
+      font-weight: 500;
+      padding: 0.5rem 1rem;
+      border-radius: 1rem;
+      font-size: 1.6rem;
+      box-shadow: 5px 10px 10px rgba(0, 0, 0, 0.2);
+      margin-bottom: 0.4rem;
+      position: relative;
+      opacity: 0;
+      transition: all 0.3s ease-in; }
+      .footer__icons-wrapper .tooltip:before {
+        content: "";
+        display: block;
+        width: 1.2rem;
+        height: 1.2rem;
+        background-color: #086ad8;
+        position: absolute;
+        bottom: -5px;
+        left: 50%;
+        transform: translateX(-50%) rotate(45deg); }
+    @media only screen and (min-width: 320px) and (max-width: 770px) {
+      .footer__icons-wrapper {
         width: 100%;
-        text-align: center; } }
+        justify-content: center; } }
     @media only screen and (min-width: 770px) and (max-width: 1440px) {
-      .footer__icons {
+      .footer__icons-wrapper {
         width: 40%;
-        text-align: right; } }
-    .footer__icons i {
+        justify-content: flex-end; } }
+    .footer__icons-wrapper i {
       font-size: 1.8rem;
       padding: 1.5rem 1.8rem;
       color: #696969;
@@ -162,13 +192,13 @@ body {
       border-radius: 50%;
       transition: all 0.7s ease-in;
       margin: 8px; }
-      .footer__icons i:hover {
+      .footer__icons-wrapper i:hover {
         color: white;
-        background-color: #007bff;
+        background-color: #086ad8;
         transition: all 0.7s ease-in; }
   .footer__bottom-wrapper {
     display: block;
     padding: 0 2rem; }
-    @media only screen and (min-width: 770px) and (max-width: 1440px) {
+    @media only screen and (min-width: 770px) and (max-width: 4000px) {
       .footer__bottom-wrapper {
         display: flex; } }
