--- a/sass/helpers/_variables.scss
+++ b/sass/helpers/_variables.scss
@@ -5,7 +5,9 @@ $color-brown: #be210b;
 $color-grey-dark: #333333;
 $color-black: #000;
 $color-red: #ff0000;
-$color-blue: #007bff;
+$color-blue: #086ad8;
+
+// #007bff
 // #086AD8
 
 /////////////// breakpoints /////////////////
