--- a/sass/sections/_section.scss
+++ b/sass/sections/_section.scss
@@ -319,8 +319,9 @@
     padding-left: 2rem;
     padding-bottom: 1rem;
 
-    @media only screen and (min-width: 770px) and (max-width: 1440px) {
+    @media only screen and (min-width: 770px) and (max-width: 4000px) {
       display: flex;
+      // padding-bottom: 5rem;
     }
   }
 
@@ -410,7 +411,7 @@
       grid-template-columns: repeat(3, 1fr);
     }
 
-    @media only screen and (min-width: 770px) and (max-width: 1440px) {
+    @media only screen and (min-width: 770px) and (max-width: 4000px) {
       display: contents;
     }
 
@@ -469,17 +470,55 @@
     }
   }
 
-  &__icons {
+  &__icons-wrapper {
+    display: inline-flex;
     text-align: center;
+    column-gap: 1.5rem;
 
-    @media only screen and (min-width: 380px) and (max-width: 770px) {
+    .icon {
+      display: flex;
+      flex-direction: column;
+      transform: translateY(-50px);
+
+      &:hover .tooltip {
+        opacity: 1;
+      }
+    }
+
+    .tooltip {
+      background-color: $color-blue;
+      color: #fff;
+      font-weight: 500;
+      padding: 0.5rem 1rem;
+      border-radius: 1rem;
+      font-size: 1.6rem;
+      box-shadow: 5px 10px 10px rgba(0, 0, 0, 0.2);
+      margin-bottom: 0.4rem;
+      position: relative;
+      opacity: 0;
+      transition: all 0.3s ease-in;
+
+      &:before {
+        content: "";
+        display: block;
+        width: 1.2rem;
+        height: 1.2rem;
+        background-color: $color-blue;
+        position: absolute;
+        bottom: -5px;
+        left: 50%;
+        transform: translateX(-50%) rotate(45deg);
+      }
+    }
+
+    @media only screen and (min-width: 320px) and (max-width: 770px) {
       width: 100%;
-      text-align: center;
+      justify-content: center;
     }
 
     @media only screen and (min-width: 770px) and (max-width: 1440px) {
       width: 40%;
-      text-align: right;
+      justify-content: flex-end;
     }
 
     i {
@@ -503,7 +542,7 @@
     display: block;
     padding: 0 2rem;
 
-    @media only screen and (min-width: 770px) and (max-width: 1440px) {
+    @media only screen and (min-width: 770px) and (max-width: 4000px) {
       display: flex;
     }
   }
