--- a/css/style.css
+++ b/css/style.css
@@ -33,26 +33,45 @@ body {
   grid-template-columns: repeat(4, 1fr); }
 
 .contact__wrapper {
+  max-width: 1200px;
+  margin: 0 auto;
+  width: 95%;
+  margin: 0 auto;
   padding: 6rem 0;
   display: flex;
   flex-direction: column; }
+  @media only screen and (min-width: 750px) and (max-width: 4000px) {
+    .contact__wrapper {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+      align-items: center; } }
 
 .contact__title {
   text-align: left;
   padding: 0 1.5rem;
-  position: relative;
   margin-bottom: 2rem; }
+  @media only screen and (min-width: 750px) and (max-width: 4000px) {
+    .contact__title {
+      width: 50%;
+      margin-bottom: 0; } }
   .contact__title h4 {
+    position: relative;
     line-height: 1.4;
     font-size: 2.4rem;
     font-weight: 600;
-    height: 100%;
     padding-left: 3.4rem; }
+    @media only screen and (min-width: 750px) and (max-width: 900px) {
+      .contact__title h4 {
+        font-size: 2.8rem; } }
+    @media only screen and (min-width: 900px) and (max-width: 4000px) {
+      .contact__title h4 {
+        font-size: 3rem; } }
   .contact__title h4::before {
     content: "";
     position: absolute;
     top: 50%;
-    left: 8%;
+    left: 0;
     width: 4px;
     height: 94%;
     transform: translateY(-50%);
@@ -70,11 +89,15 @@ body {
 .contact__info {
   text-align: center;
   padding: 0 1.5rem; }
+  @media only screen and (min-width: 750px) and (max-width: 4000px) {
+    .contact__info {
+      display: flex;
+      justify-content: flex-end;
+      width: 50%; } }
   .contact__info-icons {
     font-size: 4rem;
     color: #086ad8; }
   .contact__info h6 {
-    text-align: center;
     font-size: 15px;
     letter-spacing: 2px;
     font-weight: 600;
@@ -86,7 +109,6 @@ body {
     width: 155px;
     margin: 0 auto;
     border-radius: 0.5rem;
-    text-align: center;
     font-weight: 600;
     margin-top: 2rem; }
     .contact__info-btn a {
@@ -99,4 +121,18 @@ body {
   text-decoration: none;
   font-size: 2.4rem;
   font-weight: 700;
-  margin-bottom: 1rem; }
+  margin-bottom: 1rem;
+  position: relative; }
+  .contact__num::after {
+    content: "";
+    position: absolute;
+    bottom: -10px;
+    right: 0;
+    width: 0;
+    height: 1px;
+    background-color: #086ad8;
+    transition: all 0.7s cubic-bezier(0.645, 0.045, 0.355, 1); }
+  .contact__num:hover:after {
+    left: 0;
+    width: 100%;
+    right: auto; }
