--- a/sass/sections/_section.scss
+++ b/sass/sections/_section.scss
@@ -283,30 +283,53 @@
 
 .contact {
   &__wrapper {
+    max-width: 1200px;
+    margin: 0 auto;
+    width: 95%;
+    margin: 0 auto;
     padding: 6rem 0;
     display: flex;
     flex-direction: column;
+
+    @media only screen and (min-width: 750px) and (max-width: 4000px) {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+      align-items: center;
+    }
   }
 
   &__title {
     text-align: left;
     padding: 0 1.5rem;
-    position: relative;
     margin-bottom: 2rem;
 
+    @media only screen and (min-width: 750px) and (max-width: 4000px) {
+      width: 50%;
+      margin-bottom: 0;
+    }
+
     h4 {
+      position: relative;
       line-height: 1.4;
       font-size: 2.4rem;
       font-weight: 600;
-      height: 100%;
       padding-left: 3.4rem;
+
+      @media only screen and (min-width: 750px) and (max-width: 900px) {
+        font-size: 2.8rem;
+      }
+
+      @media only screen and (min-width: 900px) and (max-width: 4000px) {
+        font-size: 3rem;
+      }
     }
 
     h4::before {
       content: "";
       position: absolute;
       top: 50%;
-      left: 8%;
+      left: 0;
       width: 4px;
       height: 94%;
       transform: translateY(-50%);
@@ -328,13 +351,18 @@
     text-align: center;
     padding: 0 1.5rem;
 
+    @media only screen and (min-width: 750px) and (max-width: 4000px) {
+      display: flex;
+      justify-content: flex-end;
+      width: 50%;
+    }
+
     &-icons {
       font-size: 4rem;
       color: $color-blue;
     }
 
     h6 {
-      text-align: center;
       font-size: 15px;
       letter-spacing: 2px;
       font-weight: 600;
@@ -348,7 +376,6 @@
       width: 155px;
       margin: 0 auto;
       border-radius: 0.5rem;
-      text-align: center;
       font-weight: 600;
       margin-top: 2rem;
 
@@ -359,13 +386,30 @@
       }
     }
   }
-
   &__num {
     color: $color-blue-dark;
     text-decoration: none;
     font-size: 2.4rem;
     font-weight: 700;
     margin-bottom: 1rem;
+    position: relative;
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: -10px;
+      right: 0;
+      width: 0;
+      height: 1px;
+      background-color: $color-blue;
+      transition: all 0.7s cubic-bezier(0.645, 0.045, 0.355, 1);
+    }
+
+    &:hover:after {
+      left: 0;
+      width: 100%;
+      right: auto;
+    }
   }
 }
 
