--- a/sass/sections/_section.scss
+++ b/sass/sections/_section.scss
@@ -86,6 +86,7 @@
 ///////////////////////////////
 
 // .feature {
+//   max-width: 1200px;
 //   width: 100%;
 //   height: 100%;
 //   padding: 6rem 0;
@@ -281,137 +282,137 @@
 //****** contact section *******//
 ///////////////////////////////
 
-.contact {
-  &__wrapper {
-    max-width: 1200px;
-    margin: 0 auto;
-    width: 95%;
-    margin: 0 auto;
-    padding: 6rem 0;
-    display: flex;
-    flex-direction: column;
+// .contact {
+//   &__wrapper {
+//     max-width: 1200px;
+//     margin: 0 auto;
+//     width: 95%;
+//     margin: 0 auto;
+//     padding: 6rem 0;
+//     display: flex;
+//     flex-direction: column;
 
-    @media only screen and (min-width: 750px) and (max-width: 4000px) {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-evenly;
-      align-items: center;
-    }
-  }
+//     @media only screen and (min-width: 750px) and (max-width: 4000px) {
+//       display: flex;
+//       flex-direction: row;
+//       justify-content: space-evenly;
+//       align-items: center;
+//     }
+//   }
 
-  &__title {
-    text-align: left;
-    padding: 0 1.5rem;
-    margin-bottom: 2rem;
+//   &__title {
+//     text-align: left;
+//     padding: 0 1.5rem;
+//     margin-bottom: 2rem;
 
-    @media only screen and (min-width: 750px) and (max-width: 4000px) {
-      width: 50%;
-      margin-bottom: 0;
-    }
+//     @media only screen and (min-width: 750px) and (max-width: 4000px) {
+//       width: 50%;
+//       margin-bottom: 0;
+//     }
 
-    h4 {
-      position: relative;
-      line-height: 1.4;
-      font-size: 2.4rem;
-      font-weight: 600;
-      padding-left: 3.4rem;
+//     h4 {
+//       position: relative;
+//       line-height: 1.4;
+//       font-size: 2.4rem;
+//       font-weight: 600;
+//       padding-left: 3.4rem;
 
-      @media only screen and (min-width: 750px) and (max-width: 900px) {
-        font-size: 2.8rem;
-      }
+//       @media only screen and (min-width: 750px) and (max-width: 900px) {
+//         font-size: 2.8rem;
+//       }
 
-      @media only screen and (min-width: 900px) and (max-width: 4000px) {
-        font-size: 3rem;
-      }
-    }
+//       @media only screen and (min-width: 900px) and (max-width: 4000px) {
+//         font-size: 3rem;
+//       }
+//     }
 
-    h4::before {
-      content: "";
-      position: absolute;
-      top: 50%;
-      left: 0;
-      width: 4px;
-      height: 94%;
-      transform: translateY(-50%);
-      background-color: $color-brown-light;
-    }
-  }
+//     h4::before {
+//       content: "";
+//       position: absolute;
+//       top: 50%;
+//       left: 0;
+//       width: 4px;
+//       height: 94%;
+//       transform: translateY(-50%);
+//       background-color: $color-brown-light;
+//     }
+//   }
 
-  &__bg-img {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    background-color: #eff2f6;
-    background-image: url(../images/bg/home-infotechno-contact-bg.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
+//   &__bg-img {
+//     display: flex;
+//     align-items: center;
+//     justify-content: space-evenly;
+//     background-color: #eff2f6;
+//     background-image: url(../images/bg/home-infotechno-contact-bg.jpg);
+//     background-size: cover;
+//     background-repeat: no-repeat;
+//   }
 
-  &__info {
-    text-align: center;
-    padding: 0 1.5rem;
+//   &__info {
+//     text-align: center;
+//     padding: 0 1.5rem;
 
-    @media only screen and (min-width: 750px) and (max-width: 4000px) {
-      display: flex;
-      justify-content: flex-end;
-      width: 50%;
-    }
+//     @media only screen and (min-width: 750px) and (max-width: 4000px) {
+//       display: flex;
+//       justify-content: flex-end;
+//       width: 50%;
+//     }
 
-    &-icons {
-      font-size: 4rem;
-      color: $color-blue;
-    }
+//     &-icons {
+//       font-size: 4rem;
+//       color: $color-blue;
+//     }
 
-    h6 {
-      font-size: 15px;
-      letter-spacing: 2px;
-      font-weight: 600;
-      text-transform: uppercase;
-      margin: 10px 0;
-    }
+//     h6 {
+//       font-size: 15px;
+//       letter-spacing: 2px;
+//       font-weight: 600;
+//       text-transform: uppercase;
+//       margin: 10px 0;
+//     }
 
-    &-btn {
-      background-color: $color-brown-shade;
-      padding: 1rem 3rem;
-      width: 155px;
-      margin: 0 auto;
-      border-radius: 0.5rem;
-      font-weight: 600;
-      margin-top: 2rem;
+//     &-btn {
+//       background-color: $color-brown-shade;
+//       padding: 1rem 3rem;
+//       width: 155px;
+//       margin: 0 auto;
+//       border-radius: 0.5rem;
+//       font-weight: 600;
+//       margin-top: 2rem;
 
-      a {
-        font-size: 1.8rem;
-        color: #fff;
-        text-decoration: none;
-      }
-    }
-  }
-  &__num {
-    color: $color-blue-dark;
-    text-decoration: none;
-    font-size: 2.4rem;
-    font-weight: 700;
-    margin-bottom: 1rem;
-    position: relative;
+//       a {
+//         font-size: 1.8rem;
+//         color: #fff;
+//         text-decoration: none;
+//       }
+//     }
+//   }
+//   &__num {
+//     color: $color-blue-dark;
+//     text-decoration: none;
+//     font-size: 2.4rem;
+//     font-weight: 700;
+//     margin-bottom: 1rem;
+//     position: relative;
 
-    &::after {
-      content: "";
-      position: absolute;
-      bottom: -10px;
-      right: 0;
-      width: 0;
-      height: 1px;
-      background-color: $color-blue;
-      transition: all 0.7s cubic-bezier(0.645, 0.045, 0.355, 1);
-    }
+//     &::after {
+//       content: "";
+//       position: absolute;
+//       bottom: -10px;
+//       right: 0;
+//       width: 0;
+//       height: 1px;
+//       background-color: $color-blue;
+//       transition: all 0.7s cubic-bezier(0.645, 0.045, 0.355, 1);
+//     }
 
-    &:hover:after {
-      left: 0;
-      width: 100%;
-      right: auto;
-    }
-  }
-}
+//     &:hover:after {
+//       left: 0;
+//       width: 100%;
+//       right: auto;
+//     }
+//   }
+// }
 
 ///////////////////////////////
 //****** footer section *******//
