--- a/sass/sections/_section.scss
+++ b/sass/sections/_section.scss
@@ -231,52 +231,26 @@
 // }
 
 ///////////////////////////////
-//****** partner section *******//
+//****** partner(brand logo) section *******//
 ///////////////////////////////
 
-// .partner {
-//   height: 200px;
+.partner {
+  height: 120px;
 
-//   &__container {
-//     width: 100%;
-//     height: 100px;
-//   }
+  &__logo--container {
+    display: flex;
+    align-items: center;
+    width: 250%;
+    padding: 0 1.5rem;
+    margin-right: 3rem;
+    column-gap: 3rem;
 
-//   &__logo {
-//     width: 100%;
-//     height: 120px;
-//   }
-
-//   &__logo--container {
-//     display: flex;
-//     align-items: center;
-//     justify-content: center;
-//     gap: 10rem;
-//     height: 100%;
-//     width: 80%;
-//     margin: 0 auto;
-//     text-align: center;
-//   }
-
-//   .bg-img {
-//     width: 100%;
-//     height: 100%;
-//     background-color: #454545;
-//     background-image: url(../../images/pattern/mitech-call-to-action-image-global.png);
-//     background-repeat: no-repeat;
-//     background-position: top 35% right -68px;
-
-//     &__text {
-//       width: 100%;
-//       height: 100%;
-//       display: flex;
-//       justify-content: center;
-//       align-items: center;
-//       font-size: 2.4rem;
-//       color: #fff;
-//     }
-//   }
-// }
+    img {
+      height: 80%;
+      padding: 0 1.5rem;
+    }
+  }
+}
 
 ///////////////////////////////
 //****** contact section *******//
