--- a/sass/sections/_section.scss
+++ b/sass/sections/_section.scss
@@ -230,27 +230,48 @@
 //   }
 // }
 
-///////////////////////////////
+////////////////////////////////////////////////////
+//********** IMAGE WITH HEADING SECTION *********//
+/////////////////////////////////////////////////////
+
+// .bg-img {
+//   background-color: #454545;
+//   background-repeat: no-repeat;
+//   background-position: top 35% right -68px;
+//   background-image: url(../../images/pattern/mitech-call-to-action-image-global.png);
+
+//   &__text {
+//     color: #fff;
+//     text-align: center;
+//     padding: 3rem 1.5rem;
+
+//     h5 {
+//       font-size: 1.8rem;
+//     }
+//   }
+// }
+
+//////////////////////////////////////////////////
 //****** partner(brand logo) section *******//
-///////////////////////////////
+//////////////////////////////////////////////////
 
-.partner {
-  height: 120px;
+// .partner {
+//   height: 120px;
 
-  &__logo--container {
-    display: flex;
-    align-items: center;
-    width: 250%;
-    padding: 0 1.5rem;
-    margin-right: 3rem;
-    column-gap: 3rem;
+//   &__logo--container {
+//     display: flex;
+//     align-items: center;
+//     width: 250%;
+//     padding: 0 1.5rem;
+//     margin-right: 3rem;
+//     column-gap: 3rem;
 
-    img {
-      height: 80%;
-      padding: 0 1.5rem;
-    }
-  }
-}
+//     img {
+//       height: 80%;
+//       padding: 0 1.5rem;
+//     }
+//   }
+// }
 
 ///////////////////////////////
 //****** contact section *******//
