--- a/sass/sections/_section.scss
+++ b/sass/sections/_section.scss
@@ -230,6 +230,116 @@
 //   }
 // }
 
+////////////////////////////////////////////////
+///////********** MOBILE APP SECTION *********//////
+/////////////////////////////////////////////////
+
+.mobile {
+  &__container {
+    padding: 4rem 0;
+  }
+
+  &__text-container {
+    text-align: center;
+    padding: 0 1.5rem;
+    margin-bottom: 3rem;
+
+    p {
+      font-size: 1.5rem;
+      line-height: 1.74;
+      color: $color-grey-2;
+    }
+  }
+
+  &__text {
+    width: 100%;
+    font-size: 2.5rem;
+    margin-bottom: 2rem;
+    line-height: 1.3;
+  }
+}
+
+.timeline-area {
+  padding: 3.2rem 1.5rem;
+
+  &__container {
+    margin-left: 1.5rem;
+    border-left: 2px solid rgba($color-blue, 0.15);
+
+    @media only screen and (min-width: 750px) and (max-width: 4000px) {
+      position: absolute;
+      left: 50%;
+      margin-left: 0;
+    }
+  }
+
+  &__charge-spots,
+  &__time-slot,
+  &__navigation {
+    text-align: left;
+    padding-left: 4.5rem;
+    margin-bottom: 5rem;
+    position: relative;
+
+    @media only screen and (min-width: 750px) and (max-width: 4000px) {
+    }
+
+    &::after {
+      content: "";
+      width: 8px;
+      height: 8px;
+      top: 10%;
+      left: -3%;
+      position: absolute;
+      background-color: #fff;
+      border-radius: 50%;
+      border: 3px solid $color-blue;
+      box-shadow: 0 0 0 8px #fff, 0 0 0 10px rgba($color-blue, 0.15);
+
+      @media only screen and (min-width: 380px) and (max-width: 750px) {
+        left: -2.4%;
+      }
+    }
+
+    // &::before {
+    //   content: "";
+    //   width: 25px;
+    //   height: 25px;
+    //   top: 8.3%;
+    //   left: -5.6%;
+    //   border: 1px solid rgba($color-blue, 0.15);
+    //   border-radius: 50%;
+    //   position: absolute;
+    // }
+  }
+
+  &__heading {
+    font-size: 3.2rem;
+    line-height: 1;
+    font-weight: 400;
+    margin-bottom: 3rem;
+    color: $color-blue;
+  }
+
+  &__heading-sub {
+    padding-top: 3rem;
+    font-size: 2.4rem;
+    margin-bottom: 2rem;
+    line-height: 1.3;
+  }
+
+  img {
+    width: 30%;
+    border-radius: 0.5rem;
+  }
+
+  p {
+    font-size: 1.6rem;
+    color: $color-grey-2;
+    line-height: 2;
+  }
+}
+
 ////////////////////////////////////////////////////
 //********** IMAGE WITH HEADING SECTION *********//
 /////////////////////////////////////////////////////
