--- a/sass/sections/_about.scss
+++ b/sass/sections/_about.scss
@@ -2,39 +2,470 @@
 //////////  ABOUT SECTION ////////////
 //////////////////////////////////////
 
-.about {
-  &__container {
-    padding: 12rem 1.5rem 5rem 1.5rem;
+// .about {
+//   // .circle {
+//   //   width: 800px;
+//   //   height: 800px;
+//   //   position: absolute;
+//   //   top: 50%;
+//   //   left: 50%;
+//   //   transform: translate(-50%, -50%);
+//   //   background: -webkit-linear-gradient(top, #fff 0, #f5f5f5 100%);
+//   //   border-radius: 50%;
+//   //   z-index: -1;
+//   // }
 
-    h4 {
-      font-size: 2rem;
-      text-transform: uppercase;
-      color: $color-grey;
-      margin-bottom: 2rem;
-      letter-spacing: 3px;
-      text-align: center;
-    }
+//   &__container {
+//     padding: 12rem 1.5rem 5rem 1.5rem;
 
-    h3 {
-      text-align: center;
-      font-size: 2.2rem;
-      margin-bottom: 2rem;
-      line-height: 5rem;
-    }
-  }
+//     h4 {
+//       font-size: 2rem;
+//       text-transform: uppercase;
+//       color: $color-grey;
+//       margin-bottom: 2rem;
+//       letter-spacing: 3px;
+//       text-align: center;
+//     }
 
-  &__cards {
-  }
+//     h3 {
+//       text-align: center;
+//       font-size: 2.2rem;
+//       margin-bottom: 2rem;
+//       line-height: 5rem;
 
-  .card-1 {
-  }
+//       @media only screen and (min-width: 640px) and (max-width: 780px) {
+//         width: 80%;
+//         margin: 0 auto;
+//       }
 
-  h5 {
-  }
+//       @media only screen and (min-width: 780px) and (max-width: 4000px) {
+//         width: 80%;
+//         margin: 0 auto;
+//         font-size: 3rem;
+//       }
+//     }
+//   }
 
-  .text {
-  }
+//   &__card {
+//     padding: 0 1.5rem;
 
-  a {
-  }
-}
+//     @media only screen and (min-width: 780px) and (max-width: 1000px) {
+//       display: flex;
+//       justify-content: center;
+//       flex-wrap: wrap;
+//       column-gap: 3rem;
+//       flex-direction: row;
+//     }
+
+//     @media only screen and (min-width: 1000px) and (max-width: 4000px) {
+//       max-width: 1200px;
+//       margin: 0 auto;
+//       display: flex;
+//       column-gap: 2rem;
+//     }
+//   }
+
+//   @keyframes animate {
+//     0% {
+//       color: $color-blue;
+//       border-bottom: 1px solid $color-blue;
+//     }
+
+//     50% {
+//       color: $color-brown-light;
+//     }
+//   }
+
+//   &__card-container {
+//     text-align: center;
+//     padding: 4rem 3rem 4rem 3rem;
+//     margin: 5rem 0;
+//     box-shadow: 0 18px 40px rgba(0, 0, 0, 0.1);
+//     transition: all 0.7s ease;
+
+//     @media only screen and (min-width: 500px) and (max-width: 780px) {
+//       margin: 3rem auto;
+//       max-width: 400px;
+//     }
+//     @media only screen and (min-width: 780px) and (max-width: 4000px) {
+//       width: 40%;
+//       box-shadow: 0 18px 40px rgba(0, 0, 0, 0.1);
+//     }
+
+//     &:hover {
+//       transform: translateY(-5px);
+
+//       a {
+//         animation: animate 0.7s ease;
+
+//         color: $color-brown-light;
+//         border-bottom: 1px solid $color-brown-light;
+//         padding-bottom: 0.4rem;
+//       }
+//     }
+//   }
+
+//   .card-1,
+//   .card-2,
+//   .card-3 {
+//     text-align: left;
+
+//     @media only screen and (min-width: 780px) and (max-width: 1000px) {
+//       width: 80%;
+//       margin: 0 auto;
+//     }
+//   }
+
+//   h5 {
+//     font-size: 1.8rem;
+//     font-weight: 500;
+//     margin-bottom: 1.2rem;
+
+//     @media only screen and (min-width: 780px) and (max-width: 4000px) {
+//       font-size: 2.4rem;
+//     }
+//   }
+
+//   .text {
+//     font-size: 1.5rem;
+//     color: $color-grey-2;
+//     padding-bottom: 2.5rem;
+//   }
+
+//   a {
+//     text-decoration: none;
+//     font-size: 1.5rem;
+//     font-weight: 600;
+//     color: $color-blue;
+//   }
+// }
+
+///////////////////////////////////////
+//////////  ABOUT INFO SECTION ////////////
+//////////////////////////////////////
+
+// .about__info {
+//   padding: 6rem 0;
+//   margin: 0 auto;
+//   max-width: 1200px;
+
+//   @media only screen and (min-width: 560px) and (max-width: 750px) {
+//     max-width: 510px;
+//   }
+
+//   @media only screen and (min-width: 750px) and (max-width: 1000px) {
+//     max-width: 690px;
+//   }
+
+//   @media only screen and (min-width: 1000px) and (max-width: 1200px) {
+//     max-width: 960px;
+//   }
+
+//   @media only screen and (min-width: 1000px) and (max-width: 4000px) {
+//     display: flex;
+//   }
+
+//   &-title {
+//     padding: 0 1.5rem;
+//     margin: 2.5rem 0;
+//     line-height: 1.3;
+
+//     h3 {
+//       font-size: 2.4rem;
+//       font-weight: 600;
+
+//       @media only screen and (min-width: 760px) and (max-width: 4000px) {
+//         font-size: 2.8rem;
+//       }
+//     }
+//   }
+
+//   &-text {
+//     padding: 0 1.5rem;
+
+//     @media only screen and (min-width: 1000px) and (max-width: 4000px) {
+//       width: 80%;
+//       margin-left: 10rem;
+//     }
+
+//     h5 {
+//       font-weight: 500;
+//       font-size: 1.8rem;
+//       padding-left: 3.4rem;
+//       border-left: 4px solid $color-brown-light;
+
+//       @media only screen and (min-width: 760px) and (max-width: 4000px) {
+//         font-size: 2.4rem;
+//       }
+//     }
+//   }
+// }
+
+///////////////////////////////
+//****** footer section *******//
+///////////////////////////////
+
+// .footer {
+//   padding: 8rem 0;
+//   max-width: 1200px;
+//   margin: 0 auto;
+
+//   &__container {
+//     width: 100%;
+//     padding-left: 2rem;
+//     padding-bottom: 1rem;
+
+//     &-flex {
+//       padding: 0 1.5rem;
+//     }
+
+//     @media only screen and (min-width: 770px) and (max-width: 4000px) {
+//       margin: 0 auto;
+//       width: 95%;
+//       display: flex;
+//       justify-content: space-between;
+//     }
+
+//     &-1,
+//     &-2,
+//     &-3 {
+//       @media only screen and (min-width: 770px) and (max-width: 1440px) {
+//         width: 20%;
+//       }
+//     }
+
+//     &-3 {
+//       grid-column: 1/2;
+//       grid-row: 3/4;
+
+//       @media only screen and (min-width: 380px) and (max-width: 770px) {
+//         grid-column: 3/4;
+//         grid-row: 1/2;
+//       }
+//     }
+
+//     &--logo {
+//       margin-bottom: 3rem;
+
+//       img {
+//         width: 230px;
+//         height: 40px;
+//       }
+//     }
+//   }
+
+//   &__title {
+//     margin-bottom: 2rem;
+//     font-family: "CerebriSans";
+//     font-weight: 700;
+//     font-size: 1.8rem;
+//     color: $color-brown;
+//     line-height: 1.3;
+//   }
+
+//   &__list {
+//     list-style: none;
+
+//     @media only screen and (min-width: 770px) and (max-width: 1440px) {
+//       display: flex;
+//       flex-direction: column;
+//     }
+
+//     &--items {
+//       margin-bottom: 1rem;
+//       font-size: 1.5rem;
+//       color: $color-grey-2;
+//       font-weight: 400;
+//     }
+//   }
+
+//   a {
+//     text-decoration: none;
+//     color: $color-grey-2;
+//   }
+
+//   .hover-on-link {
+//     position: relative;
+
+//     &:hover {
+//       color: $color-brown-light;
+//       transition: color 0.5s ease;
+//     }
+
+//     &::after {
+//       transition: all 0.7s cubic-bezier(0.645, 0.045, 0.355, 1);
+//       content: "";
+//       position: absolute;
+//       bottom: -10px;
+//       right: 0;
+//       width: 0;
+//       height: 1px;
+//       background-color: $color-brown-light;
+//     }
+
+//     &:hover:after {
+//       left: 0;
+//       width: 100%;
+//       right: auto;
+//     }
+//   }
+
+//   &__link {
+//     display: grid;
+//     width: 100%;
+//     margin: 0 auto;
+//     margin-bottom: 3rem;
+//     text-align: left;
+//     grid-template-rows: 12% 1fr 12% 12%;
+//     grid-template-columns: 1fr 1fr;
+
+//     @media only screen and (min-width: 320px) and (max-width: 380px) {
+//       grid-template-rows: 15% 1fr 20%;
+//       grid-template-columns: repeat(2, 1fr);
+//     }
+
+//     @media only screen and (min-width: 380px) and (max-width: 770px) {
+//       grid-template-rows: 15% 1fr;
+//       grid-template-columns: repeat(3, 1fr);
+//     }
+
+//     @media only screen and (min-width: 770px) and (max-width: 4000px) {
+//       display: contents;
+//     }
+
+//     h6 {
+//       padding: 0 2rem;
+//       font-size: 1.8rem;
+//       color: $color-grey-dark;
+//       margin-bottom: 2rem;
+//     }
+
+//     .col-1 {
+//       padding: 0 2rem;
+//       grid-column: 1/2;
+//       grid-row: 2/3;
+//     }
+
+//     .col-2 {
+//       padding: 0 2rem;
+//       grid-column: 2/3;
+//       grid-row: 2/3;
+//     }
+
+//     .col-3 {
+//       h6 {
+//         grid-column: 1/2;
+//         grid-row: 3/4;
+//       }
+//       padding: 0 2rem;
+//       grid-column: 1/2;
+//       grid-row: 4/5;
+//     }
+//   }
+
+//   .copyright {
+//     width: 80%;
+//     text-align: center;
+//     font-size: 1.5rem;
+//     color: $color-grey-2;
+//     margin: 0 auto 2rem auto;
+
+//     @media only screen and (min-width: 320px) and (max-width: 770px) {
+//       padding: 1rem;
+//       width: 100%;
+//       text-align: center;
+//     }
+
+//     @media only screen and (min-width: 770px) and (max-width: 1440px) {
+//       width: 60%;
+//       text-align: left;
+//       padding: 0 1rem;
+//       margin: 8px;
+//     }
+
+//     &__link {
+//       color: $color-red;
+//     }
+//   }
+
+//   &__icons-wrapper {
+//     display: inline-flex;
+//     text-align: center;
+//     column-gap: 1.5rem;
+
+//     @media only screen and (min-width: 320px) and (max-width: 770px) {
+//       column-gap: 0;
+//     }
+
+//     .icon {
+//       display: flex;
+//       flex-direction: column;
+//       transform: translateY(-50px);
+
+//       &:hover .tooltip {
+//         opacity: 1;
+//       }
+//     }
+
+//     .tooltip {
+//       background-color: $color-blue;
+//       color: #fff;
+//       font-weight: 500;
+//       padding: 0.5rem 1rem;
+//       border-radius: 1rem;
+//       font-size: 1.6rem;
+//       box-shadow: 5px 10px 10px rgba(0, 0, 0, 0.2);
+//       margin-bottom: 0.4rem;
+//       position: relative;
+//       opacity: 0;
+//       transition: all 0.3s ease-in;
+
+//       &:before {
+//         content: "";
+//         display: block;
+//         width: 1.2rem;
+//         height: 1.2rem;
+//         background-color: $color-blue;
+//         position: absolute;
+//         bottom: -5px;
+//         left: 50%;
+//         transform: translateX(-50%) rotate(45deg);
+//       }
+//     }
+
+//     @media only screen and (min-width: 320px) and (max-width: 770px) {
+//       width: 100%;
+//       justify-content: center;
+//     }
+
+//     @media only screen and (min-width: 770px) and (max-width: 1440px) {
+//       width: 40%;
+//       justify-content: flex-end;
+//     }
+
+//     i {
+//       font-size: 1.8rem;
+//       padding: 1.5rem 1.8rem;
+//       color: $color-grey-2;
+//       border: 1px solid $color-grey-light;
+//       border-radius: 50%;
+//       transition: all 0.7s ease-in;
+//       margin: 8px;
+
+//       &:hover {
+//         color: white;
+//         background-color: $color-blue;
+//         transition: all 0.7s ease-in;
+//       }
+//     }
+//   }
+
+//   &__bottom-wrapper {
+//     display: block;
+//     padding: 0 2rem;
+
+//     @media only screen and (min-width: 770px) and (max-width: 4000px) {
+//       display: flex;
+//     }
+//   }
+// }
